[gd_scene load_steps=4 format=3 uid="uid://cvaard06nb5lg"]

[ext_resource type="Script" path="res://Scenes/UI/MultiSlot.gd" id="1_1khlv"]
[ext_resource type="Texture2D" uid="uid://b5a6olytlq4l5" path="res://Resources/Tilesets/basictiles.png" id="1_am3aq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mf0wk"]
texture = ExtResource("1_am3aq")
region_rect = Rect2(92, 220, 24, 24)

[node name="MultiSlot" type="Control" groups=["MultiSlot"]]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 3
anchor_right = 0.05
anchor_bottom = 0.075
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1khlv")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mf0wk")

[node name="SelectBackground" type="Panel" parent="."]
visible = false
self_modulate = Color(0.972696, 0.849928, 0, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mf0wk")

[node name="texture" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="pressed" from="texture" to="." method="_on_texture_pressed"]
[connection signal="timeout" from="Timer" to="." method="_ready"]
